app/assets/stylesheets/pages/landing.sass
.landing
  h1
    font-size: 1.8rem
  h2
    font-size: 1.2rem
  .landing-header
    .title
      max-width: 60%
    .subtitle
      font-size: 1.3rem
    .image
      text-align: center
      img
        width: 70%
  .breadcrumbs
    font-weight: bold
    .arrow
      font-weight: normal
      margin: 0 1rem
  &.small-padding
    padding: 2rem 0
  .explanations
    .icon
      height: 80px
      width: 100%
      text-align: center
    .col
      flex: 0 0 33.33%
      img
        height: 100%

  @media(max-width: 750px)
    .subtitle
      max-width: 100%

section#section-formulaire
  .description
    margin-bottom: 3rem
    max-width: 35rem

section#section-formulaire .solicitation-form
  form label
    font-weight: bold
  &:not(.in-iframe)
    margin-top: 3rem
    display: flex
    form
      margin: 0
      flex: 1 0 60%
    @media(max-width: 750px)
      flex-wrap: wrap
      flex-direction: column-reverse
      .description
        padding: 0 0.5rem
        margin-bottom: 2rem
        .explanation
          div
            height: auto

.notification.contact-delay
  display: flex
  img
    margin-right: 0.5rem
    width: 25px
    height: 25px

.explanation
  margin-top: 1rem
  div
    display: flex
  img
    margin-right: 0.5rem
    width: 25px
    height: 25px

